# context-ambulance

./: .env.example  .gitignore  README.md  llm_response.md  my_rescue.md  my_rescue_new.md  pyproject.toml  test_rescue.md
.github/: copilot-instructions.md
extension/: INSTALL.md  README.md  create-icons.ps1  create-png-icons.ps1  manifest.json
extension/background/: background.js
extension/content/: chatgpt-scraper.js  claude-scraper.js  gemini-scraper.js
extension/popup/: popup.css  popup.html  popup.js
src/context_ambulance/: __init__.py  cli.py  config.py
src/context_ambulance/analyzers/: __init__.py  gemini.py  rules.py
src/context_ambulance/generators/: __init__.py
src/context_ambulance/sanitizers/: __init__.py
src/context_ambulance/templates/: rescue_package.md
tests/: __init__.py  test_analyzers.py  test_sanitizers.py
tests/fixtures/: __init__.py  sample_chat.txt  sample_chat_1_genai.txt  sample_conversation.txt
